--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title></title>
+  <title>Github App</title>
+  <link rel="stylesheet" href="dist/style.css">
 </head>
 <body>
   <div data-js="app"></div>
